--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   
-  <script src="easyhttp2.js"></script>
+  <script src="bootCampHttp.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
