--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
   <title>EasyHTTP2 Example</title>
 </head>
 <body>
-  
-  <script src="bootCampHttp.js"></script>
-  <script src="app.js"></script>
+
+
+<!--JQuery Javascript-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="bootCampHttp.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
