--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <!--JQuery Javascript-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="bootCampHttp.js"></script>
+<script src="lib.js"></script>
 <script src="app.js"></script>
 </body>
 </html>
