Refactored console.log calls

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
 <script src="bootCampHttp.js"></script>
 <script src="lib.js"></script>
 <script src="app.js"></script>
+<script src="donte.js"></script>
 </body>
 </html>
