Refactored console.log calls

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="bootCampHttp.js"></script>
 <script src="lib.js"></script>
-<script src="app.js"></script>
+<script src="appLegacy.js"></script>
 <script src="donte.js"></script>
 </body>
 </html>
