--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
 
 <!--JQuery Javascript-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="bootCampHttp.js"></script>
-<script src="lib.js"></script>
-<script src="appLegacy.js"></script>
-<script src="donte.js"></script>
+<script src="amazon.js"></script>
 </body>
 </html>
