Fixed tv and movie search bugs

--- a/search-series.html
+++ b/search-series.html
@@ -11,8 +11,8 @@
     <link rel="mask-icon" href="../favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
-	<link rel="stylesheet" type="text/css" href="../style/main.css">
-	<link rel="stylesheet" href="../style/fonts.css">
+	<link rel="stylesheet" type="text/css" href="style/main.css">
+	<link rel="stylesheet" href="style/fonts.css">
 </head>
 <body>
 <nav>
@@ -21,7 +21,7 @@
 	</div>
 </nav>
 <div class="submenu">
-	<li class="list"><a href="../movies/search-movies.html">Movies</a></li>
+	<li class="list"><a href="index.html">Movies</a></li>
 	<li class="list"><a href="search-series.html">TV Shows</a></li>
 </div>
 
@@ -71,9 +71,9 @@
         <button id="prev" title="Previous page">PREVIOUS</button>
 		<button id="next" title="Next page">NEXT</button>
     </div>
-<script src="../scripts/config.js"></script>
-<script src="../scripts/series/search-series.js"></script>
-<script src="../scripts/global.js"></script>
+<script src="scripts/config.js"></script>
+<script src="scripts/series/search-series.js"></script>
+<script src="scripts/global.js"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </body>
 </html>
