--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Search Movies | WatchSomething</title>
-	<link rel="stylesheet" type="text/css" href="../style/main.css">
-	<link rel="stylesheet" href="../style/fonts.css">
+	<link rel="stylesheet" type="text/css" href="style/main.css">
+	<link rel="stylesheet" href="style/fonts.css">
 </head>
 <body>
 <nav>
@@ -14,8 +14,8 @@
 	</div>
 </nav>
 <div class="submenu">
-	<li class="list"><a href="search-movies.html">Movies</a></li>
-	<li class="list"><a href="../series/search-series.html">TV Shows</a></li>
+	<li class="list"><a href="index.html">Movies</a></li>
+	<li class="list"><a href="search-series.html">TV Shows</a></li>
 </div>
 	<div class="container_search">
 			<form id="form" autocomplete="off">
@@ -61,9 +61,9 @@
         <button id="prev" title="Previous page">PREVIOUS</button>
 		<button id="next" title="Next page">NEXT</button>
     </div>
-<script src="../scripts/config.js"></script>
-<script src="../scripts/movies/search-movies.js"></script>
-<script src="../scripts/global.js"></script>
+<script src="scripts/config.js"></script>
+<script src="scripts/movies/search-movies.js"></script>
+<script src="scripts/global.js"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </body>
 </html>
