--- a/search-series.html
+++ b/search-series.html
@@ -21,7 +21,7 @@
 	</div>
 </nav>
 <div class="submenu">
-	<li class="list"><a href="index.html">Movies</a></li>
+	<li class="list"><a href="/">Movies</a></li>
 	<li class="list"><a href="search-series.html">TV Shows</a></li>
 </div>
 
