--- a/search-movies.html
+++ b/search-movies.html
@@ -3,55 +3,47 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Tv Shows by title | WatchSomething</title>
-	<link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../favicon/favicon-16x16.png">
-    <link rel="manifest" href="../favicon/site.webmanifest">
-    <link rel="mask-icon" href="../favicon/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="theme-color" content="#ffffff">
+	<title>Search Movies | WatchSomething</title>
 	<link rel="stylesheet" type="text/css" href="style/main.css">
 	<link rel="stylesheet" href="style/fonts.css">
 </head>
 <body>
 <nav>
 	<div class="logo">
-		<h3>Search TV Shows</h3>
+		<h3>Search Movies</h3>
 	</div>
 </nav>
 <div class="submenu">
 	<li class="list"><a href="search-movies.html">Movies</a></li>
 	<li class="list"><a href="search-series.html">TV Shows</a></li>
 </div>
-
 	<div class="container_search">
 			<form id="form" autocomplete="off">
-                    <input type="text" id="inputField" placeholder="Title, genre, year...">
+                    <input type="text" id="inputField" placeholder="Title, actor, genre, year, director...">
 			 </form>
 
 			 <div class="wrap">
 				<select id="selectedGenres">
 					<option>SELECT GENRE </option>
-					<option id="10759" class="tag">Action</option>
-					<option id="10759" class="tag">Adventure</option>
+					<option id="28" class="tag">Action</option>
+					<option id="12" class="tag">Adventure</option>
 					<option id="16" class="tag">Animation</option>
 					<option id="35" class="tag">Comedy</option>
 					<option id="80" class="tag">Crime</option>
 					<option id="99" class="tag">Documentary</option>
 					<option id="18" class="tag">Drama</option>
 					<option id="10751" class="tag">Family</option>
-					<option id="10762" class="tag">Kids</option>
+					<option id="14" class="tag">Fantasy</option>
+					<option id="36" class="tag">History</option>
+					<option id="27" class="tag">Horror</option>
+					<option id="10402" class="tag">Music</option>
 					<option id="9648" class="tag">Mystery</option>
-					<option id="10763" class="tag">News</option>
-					<option id="10764" class="tag">Reality</option>
-					<option id="10766" class="tag">Soap</option>
-					<option id="10767" class="tag">Talk</option>
-					<option id="10765" class="tag">Sci-Fi</option>
-					<option id="10765" class="tag">Fantasy</option>
-					<option id="10768" class="tag">War</option>
+					<option id="10749" class="tag">Romance</option>
+					<option id="878" class="tag">Sci-Fi</option>
+					<option id="53" class="tag">Thriller</option>
+					<option id="10752" class="tag">War</option>
 					<option id="37" class="tag">Western</option>
-					<option id="10768" class="tag">Politics</option>
+					<option id="10770" class="tag">TV Movie</option>
 				</select>
 		   </div>
 	</div>
@@ -64,15 +56,13 @@
 		<h1 id="searchedFor"></h1>
 		<div id="movies" class="moviesRows"></div>
 	</div>
-	<!-- Random tv show container -->
 	<div class="randomContainer"></div>
-	<!-- Buttons for Pages -->
 	<div class="pages">
         <button id="prev" title="Previous page">PREVIOUS</button>
 		<button id="next" title="Next page">NEXT</button>
     </div>
 <script src="scripts/config.js"></script>
-<script src="scripts/series/search-series.js"></script>
+<script src="scripts/movies/search-movies.js"></script>
 <script src="scripts/global.js"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </body>
