Added series search

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <nav>
 	<div class="logo">
-		<h3>Search Movies</h3>
+		<h3>Search Movies or TV Shows</h3>
 	</div>
 </nav>
 <div class="submenu">
